--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ CVS
 .svn
 
 bin
+.bin
 Bin
 obj
 Debug
@@ -42,6 +43,9 @@ build
 *.pbxuser
 *.perspectivev3
 .DS_Store
+xcuserdata
+*.sublime-project
+*.sublime-workspace
 
 *.old
 *.log
